add quick styling for anchor tags

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -53,3 +53,7 @@ body {
   content: " *";
   color: red;
 }
+
+a {
+  @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600 dark:visited:text-purple-300;
+}
