--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -19,7 +19,7 @@
   select,
   select[multiple],
   textarea {
-    @apply block w-full rounded-md shadow-sm text-base h-10 pl-2 pr-2 mb-3 border border-ocean-100 bg-white dark:bg-slate-700;
+    @apply mb-3 block h-10 w-full rounded-md border border-ocean-100 bg-white pl-2 pr-2 text-base shadow-sm dark:bg-slate-700;
   }
 
   input[type="checkbox"],
@@ -30,7 +30,7 @@
 
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options,
 .ql-picker-label {
-  @apply text-slate-800 bg-slate-100 dark:bg-slate-800 dark:text-slate-100;
+  @apply bg-slate-100 text-slate-800 dark:bg-slate-800 dark:text-slate-100;
 }
 
 .ql-snow .ql-stroke {
@@ -46,7 +46,7 @@ body {
 }
 
 .btn {
-  @apply bg-ocean-100 hover:bg-ocean-200 text-white font-bold py-2 px-4 rounded;
+  @apply rounded bg-ocean-100 py-2 px-4 font-bold text-white hover:bg-ocean-200;
 }
 
 .required:after {
@@ -55,5 +55,5 @@ body {
 }
 
 a {
-  @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600 dark:visited:text-purple-300;
+  @apply text-blue-600 underline visited:text-purple-600 hover:text-blue-800 dark:visited:text-purple-300;
 }
